--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ locale: zh-CN
 
 # Build settings
 markdown: kramdown
-# remote_theme: mmistakes/minimal-mistakes
+remote_theme: mmistakes/minimal-mistakes
 # theme: minimal-mistakes-jekyll
 
 # Outputting
